--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,14 @@ jobs:
       uses: actions/checkout@v3
       with: 
         fetch-depth: 0
+
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with:
+        major_pattern: "major:"
+        mino_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: versioning
     
     - name: DockerHub Login
       env:
@@ -26,13 +34,18 @@ jobs:
         docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASSWORD
 
     - name: Build docker image
+      env:
+        VERSION: ${{ steps.versioning.outputs.version }}
       run: |
-        docker build -t galaag/grapghql:0.0.2 .
+        docker build -t galaag/grapghql:$VERSION .
         docker build -t galaag/grapghql:latest .
 
     - name: Push docker image to dockerhub
+      env:
+        VERSION: ${{ steps.versioning.outputs.version }}
       run: |
-        docker push galaag/grapghql:0.0.2
+        docker push galaag/grapghql:$VERSION
         docker push galaag/grapghql:latest
+  
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
